--- a/movieApiUi-master/src/app/components/navbar/navbar.component.html
+++ b/movieApiUi-master/src/app/components/navbar/navbar.component.html
@@ -13,14 +13,15 @@
       </div>
     </div>
     <div class="space-x-4 flex items-center">
-        <a *ngIf="!isLoggedIn()" routerLink="/login" class="bg-yellow-500 font-bold text-blue-900 px-3 py-2 rounded hover:bg-yellow-400">Login</a>
-        <a *ngIf="!isLoggedIn()" routerLink="/register" class="bg-yellow-500 font-bold text-blue-900 px-3 py-2 rounded hover:bg-yellow-400">Register</a>
+        <a routerLink="/login" *ngIf="!isLoggedIn()" class="bg-yellow-500 font-bold text-blue-900 px-3 py-2 rounded hover:bg-yellow-400 hover:cursor-pointer">Login</a>
+        <a routerLink="/register" *ngIf="!isLoggedIn()" class="bg-yellow-500 font-bold text-blue-900 px-3 py-2 rounded hover:bg-yellow-400">Register</a>
 
         <!-- For Logged in User -->
-        <div *ngIf="isLoggedIn()" class="flex items-center space-x-2">
+        <div class="flex items-center space-x-2" *ngIf="isLoggedIn()">
           <h2 class="font-bold text-yellow-300 px-3 py-2 rounded text-lg">{{name}}</h2>
           <a (click)="logout()" class="text-white bg-red-500 hover:bg-red-700 px-4 py-2 rounded hover:cursor-pointer">Logout</a>
         </div>
+
     </div>
 </nav>
   
